K8s/departments-mssql-srv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: departments-mssql-srv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: departments-mssql
  template:
    metadata:
      labels:
        app: departments-mssql
    spec:
      containers:
        - name: departments-mssql
          image: mcr.microsoft.com/mssql/server:2019-latest
          ports:
          - containerPort: 1433
          volumeMounts:
          - mountPath: /var/opt/mssql/data
            name: deptmssqldb
      volumes:
      - name: deptmssqldb
        persistentVolumeClaim:
          claimName: departments-mssql-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: departments-mssql-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: departments-mssql
  ports:
  - name: departments-mssql
    protocol: TCP
    port: 1433
    targetPort: 1433
---
apiVersion: v1
kind: Service
metadata:
  name: departments-mssql-loadbalancer-srv
spec:
  type: LoadBalancer
  selector:
    app: departments-mssql
  ports:
  - name: departments-mssql
    protocol: TCP
    port: 1433
    targetPort: 1433
