K8s/departments-nodeport-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: departments-nodeport-srv
spec:
  type: NodePort
  selector:
    app: departmentservice
  ports:
    - name: departmentservice
      protocol: TCP
      port: 80
      targetPort: 80
