K8s/employees-mssql-srv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employees-mssql-srv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: employees-mssql
  template:
    metadata:
      labels:
        app: employees-mssql
    spec:
      containers:
        - name: employees-mssql
          image: mcr.microsoft.com/mssql/server:2019-latest
          ports:
          - containerPort: 1433
          volumeMounts:
          - mountPath: /var/opt/mssql/data
            name: emplmssqldb
      volumes:
      - name: emplmssqldb
        persistentVolumeClaim:
          claimName: employees-mssql-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: employees-mssql-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: employees-mssql
  ports:
  - name: employees-mssql
    protocol: TCP
    port: 1434
    targetPort: 1433
---
apiVersion: v1
kind: Service
metadata:
  name: employees-mssql-loadbalancer-srv
spec:
  type: LoadBalancer
  selector:
    app: employees-mssql
  ports:
  - name: employees-mssql
    protocol: TCP
    port: 1434
    targetPort: 1433
