K8s/rabbitmq-srv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq:management
        ports:
        - containerPort: 15672
          name: rmq-mgmt
        - containerPort: 5672
          name: rmq-msg
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: rabbitmq
  ports:
  - name: rmq-mgmt-port
    protocol: TCP
    port: 15672
    targetPort: 15672
  - name: rmq-msg-port
    protocol: TCP
    port: 5672
    targetPort: 5672
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-loadbalancer-srv
spec:
  type: LoadBalancer
  selector:
    app: rabbitmq
  ports:
  - name: rmq-mgmt-port
    protocol: TCP
    port: 15672
    targetPort: 15672
  - name: rmq-msg-port
    protocol: TCP
    port: 5672
    targetPort: 5672
