K8s/ingress-net-config.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-net-config
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /api/departments
            pathType: Prefix
            backend:
              service:
                name: departments-clusterip-srv
                port:
                  number: 80
          - path: /api/e/departments
            pathType: Prefix
            backend:
              service:
                name: employees-clusterip-srv
                port:
                  number: 80
          - path: /api/e/employees
            pathType: Prefix
            backend:
              service:
                name: employees-clusterip-srv
                port:
                  number: 80
